...
            modifier = Modifier
                .fillMaxWidth()
                .border(1.dp, NomsyColors.Title, shape = RoundedCornerShape(8.dp))
                .background(NomsyColors.Background, shape = RoundedCornerShape(16.dp))
                .padding(16.dp)
                .verticalScroll(rememberScrollState())
                .testTag("RecipePopUp"),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            GlideImage(
                model = recipe.strMealThumb,
                contentDescription = recipe.strMeal,
                modifier = Modifier
...

            Text(
                text = recipe.strMeal,
                fontSize = 24.sp,
                fontWeight = FontWeight.Bold,
                color = NomsyColors.Title,
                modifier = Modifier.testTag("RecipeTitle")
            )

            Spacer(modifier = Modifier.height(8.dp))

            Text(
                text = "Category: ${recipe.strCategory}",
...
